// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button tests should render Button correctly 1`] = `
<DocumentFragment>
  .c0 {
  height: 2.25rem;
  padding: 0 0.75rem;
  font-size: 0.875rem;
  position: relative;
  border: none;
  display: flex;
  align-items: center;
  font-weight: 500;
  cursor: pointer;
  border-radius: 4px;
  text-decoration: none;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out,border-color 0.1s ease-in-out;
  background-color: #276EF1;
  color: #FFFFFF;
  width: normal;
  height: normal;
  width: fit-content;
}

.c0:hover:not(:active, :disabled) {
  background-color: #0e55d7;
}

.c0 .material-symbols-sharp,
.c0 .material-symbols-rounded {
  color: inherit;
}

.c0 svg,
.c0 svg g {
  fill: #FFFFFF;
}

.c0:disabled {
  cursor: default;
  opacity: 0.6;
}

<button
    class="c0"
    data-testid="button"
  >
    <span
      class=""
    >
      button
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button tests should render Button link 1`] = `
<DocumentFragment>
  .c0 {
  height: 2.25rem;
  padding: 0 0.75rem;
  font-size: 0.875rem;
  position: relative;
  border: none;
  display: flex;
  align-items: center;
  font-weight: 500;
  cursor: pointer;
  border-radius: 4px;
  text-decoration: none;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out,border-color 0.1s ease-in-out;
  background-color: #276EF1;
  color: #FFFFFF;
  width: normal;
  height: normal;
  width: fit-content;
}

.c0:hover:not(:active, :disabled) {
  background-color: #0e55d7;
}

.c0 .material-symbols-sharp,
.c0 .material-symbols-rounded {
  color: inherit;
}

.c0 svg,
.c0 svg g {
  fill: #FFFFFF;
}

.c0:disabled {
  cursor: default;
  opacity: 0.6;
}

<a
    class="c0"
    data-testid="button"
  >
    <span
      class=""
    >
      button link
    </span>
  </a>
</DocumentFragment>
`;

exports[`Button tests should render Button with icon 1`] = `
<DocumentFragment>
  .c1 {
  height: 1.5rem;
  width: 1.5rem;
  flex-shrink: 0;
  margin-right: 0.5rem;
}

.c2 {
  color: #000000;
  font-size: 1.5rem;
}

.c0 {
  height: 2.25rem;
  padding: 0 0.75rem;
  font-size: 0.875rem;
  position: relative;
  border: none;
  display: flex;
  align-items: center;
  font-weight: 500;
  cursor: pointer;
  border-radius: 4px;
  text-decoration: none;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out,border-color 0.1s ease-in-out;
  background-color: #276EF1;
  color: #FFFFFF;
  width: normal;
  height: normal;
  width: fit-content;
}

.c0:hover:not(:active, :disabled) {
  background-color: #0e55d7;
}

.c0 .material-symbols-sharp,
.c0 .material-symbols-rounded {
  color: inherit;
}

.c0 svg,
.c0 svg g {
  fill: #FFFFFF;
}

.c0:disabled {
  cursor: default;
  opacity: 0.6;
}

<button
    class="c0"
    data-testid="button"
  >
    <div
      class="c1"
      data-testid="icon-container"
      size="24"
    >
      <span
        class="c2 material-symbols-rounded"
        data-testid="icon"
        size="24"
      >
        help
      </span>
    </div>
    <span
      class=""
    >
      button icon
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button tests should render Button with styled system utilities 1`] = `
<DocumentFragment>
  .c0 {
  height: 2.25rem;
  padding: 0 0.75rem;
  font-size: 0.875rem;
  position: relative;
  border: none;
  display: flex;
  align-items: center;
  font-weight: 500;
  cursor: pointer;
  border-radius: 4px;
  text-decoration: none;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out,border-color 0.1s ease-in-out;
  background-color: #276EF1;
  color: #FFFFFF;
  width: normal;
  height: normal;
  flex-direction: column;
  margin-bottom: 100px;
  width: fit-content;
}

.c0:hover:not(:active, :disabled) {
  background-color: #0e55d7;
}

.c0 .material-symbols-sharp,
.c0 .material-symbols-rounded {
  color: inherit;
}

.c0 svg,
.c0 svg g {
  fill: #FFFFFF;
}

.c0:disabled {
  cursor: default;
  opacity: 0.6;
}

<button
    class="c0"
    data-testid="button"
  >
    <span
      class=""
    >
      button link
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button tests should render Danger Button 1`] = `
<DocumentFragment>
  .c0 {
  height: 2.25rem;
  padding: 0 0.75rem;
  font-size: 0.875rem;
  position: relative;
  border: none;
  display: flex;
  align-items: center;
  font-weight: 500;
  cursor: pointer;
  border-radius: 4px;
  text-decoration: none;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out,border-color 0.1s ease-in-out;
  background-color: transparent;
  color: #E11900;
  width: normal;
  height: normal;
  width: fit-content;
}

.c0:hover:not(:disabled) {
  color: #E11900;
  background-color: #FFEFED;
}

.c0:active:not(:disabled) {
  background-color: #FED7D2;
}

.c0 .material-symbols-sharp,
.c0 .material-symbols-rounded {
  color: inherit;
}

.c0 svg,
.c0 svg g {
  fill: #E11900;
}

.c0:disabled {
  cursor: default;
  opacity: 0.6;
}

<button
    class="c0"
    data-testid="button"
  >
    <span
      class=""
    >
      button
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button tests should render DangerFilled Button 1`] = `
<DocumentFragment>
  .c0 {
  height: 2.25rem;
  padding: 0 0.75rem;
  font-size: 0.875rem;
  position: relative;
  border: none;
  display: flex;
  align-items: center;
  font-weight: 500;
  cursor: pointer;
  border-radius: 4px;
  text-decoration: none;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out,border-color 0.1s ease-in-out;
  background-color: #E11900;
  color: #FFFFFF;
  width: normal;
  height: normal;
  width: fit-content;
}

.c0:hover:not(:disabled) {
  background-color: #AB1300;
}

.c0:active:not(:disabled) {
  background-color: #E11900;
}

.c0 .material-symbols-sharp,
.c0 .material-symbols-rounded {
  color: inherit;
}

.c0 svg,
.c0 svg g {
  fill: #FFFFFF;
}

.c0:disabled {
  cursor: default;
  opacity: 0.6;
}

<button
    class="c0"
    data-testid="button"
  >
    <span
      class=""
    >
      button
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button tests should render Neutral Button 1`] = `
<DocumentFragment>
  .c0 {
  height: 2.25rem;
  padding: 0 0.75rem;
  font-size: 0.875rem;
  position: relative;
  border: none;
  display: flex;
  align-items: center;
  font-weight: 500;
  cursor: pointer;
  border-radius: 4px;
  text-decoration: none;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out,border-color 0.1s ease-in-out;
  background-color: transparent;
  color: #000000;
  width: normal;
  height: normal;
  width: fit-content;
}

.c0:hover:not(:disabled) {
  background-color: #EEEEEE;
}

.c0:active:not(:disabled) {
  background-color: #E2E2E2;
}

.c0 .material-symbols-sharp,
.c0 .material-symbols-rounded {
  color: inherit;
}

.c0 svg,
.c0 svg g {
  fill: #000000;
}

.c0:disabled {
  cursor: default;
  opacity: 0.6;
}

<button
    class="c0"
    data-testid="button"
  >
    <span
      class=""
    >
      button
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button tests should render Outlined Button 1`] = `
<DocumentFragment>
  .c0 {
  height: 2.25rem;
  padding: 0 0.75rem;
  font-size: 0.875rem;
  position: relative;
  border: none;
  display: flex;
  align-items: center;
  font-weight: 500;
  cursor: pointer;
  border-radius: 4px;
  text-decoration: none;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out,border-color 0.1s ease-in-out;
  background-color: #FFFFFF;
  color: #000000;
  border: 1px solid #CBCBCB;
  width: normal;
  height: normal;
  width: fit-content;
}

.c0:hover:not(:active, :disabled) {
  color: #000000;
  border-color: #757575;
}

.c0:hover:not(:active, :disabled) .material-symbols-sharp {
  color: inherit;
}

.c0 .material-symbols-sharp,
.c0 .material-symbols-rounded {
  color: inherit;
}

.c0 svg,
.c0 svg g {
  fill: #000000;
}

.c0:disabled {
  cursor: default;
  opacity: 0.6;
}

<button
    class="c0"
    data-testid="button"
  >
    <span
      class=""
    >
      button
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button tests should render PrimaryNeutral Button 1`] = `
<DocumentFragment>
  .c0 {
  height: 2.25rem;
  padding: 0 0.75rem;
  font-size: 0.875rem;
  position: relative;
  border: none;
  display: flex;
  align-items: center;
  font-weight: 500;
  cursor: pointer;
  border-radius: 4px;
  text-decoration: none;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out,border-color 0.1s ease-in-out;
  background-color: transparent;
  color: #000000;
  width: normal;
  height: normal;
  width: fit-content;
}

.c0:hover:not(:disabled) {
  color: #276EF1;
  background-color: #EFF3FE;
}

.c0:active:not(:disabled) {
  background-color: #D4E2FC;
}

.c0 .material-symbols-sharp,
.c0 .material-symbols-rounded {
  color: inherit;
}

.c0 svg,
.c0 svg g {
  fill: #000000;
}

.c0:disabled {
  cursor: default;
  opacity: 0.6;
}

<button
    class="c0"
    data-testid="button"
  >
    <span
      class=""
    >
      button
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button tests should render Secondary Button 1`] = `
<DocumentFragment>
  .c0 {
  height: 2.25rem;
  padding: 0 0.75rem;
  font-size: 0.875rem;
  position: relative;
  border: none;
  display: flex;
  align-items: center;
  font-weight: 500;
  cursor: pointer;
  border-radius: 4px;
  text-decoration: none;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out,border-color 0.1s ease-in-out;
  background-color: #000000;
  color: #FFFFFF;
  width: normal;
  height: normal;
  width: fit-content;
}

.c0:hover:not(:active, :disabled) {
  background-color: #333;
}

.c0 .material-symbols-sharp,
.c0 .material-symbols-rounded {
  color: inherit;
}

.c0 svg,
.c0 svg g {
  fill: #FFFFFF;
}

.c0:disabled {
  cursor: default;
  opacity: 0.6;
}

<button
    class="c0"
    data-testid="button"
  >
    <span
      class=""
    >
      button
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button tests should render Tertiary Button 1`] = `
<DocumentFragment>
  .c0 {
  height: 2.25rem;
  padding: 0 0.75rem;
  font-size: 0.875rem;
  position: relative;
  border: none;
  display: flex;
  align-items: center;
  font-weight: 500;
  cursor: pointer;
  border-radius: 4px;
  text-decoration: none;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out,border-color 0.1s ease-in-out;
  background-color: #EEEEEE;
  color: #000000;
  width: normal;
  height: normal;
  width: fit-content;
}

.c0:hover:not(:active, :disabled) {
  background-color: #E2E2E2;
}

.c0 .material-symbols-sharp,
.c0 .material-symbols-rounded {
  color: inherit;
}

.c0 svg,
.c0 svg g {
  fill: #000000;
}

.c0:disabled {
  cursor: default;
  opacity: 0.6;
}

<button
    class="c0"
    data-testid="button"
  >
    <span
      class=""
    >
      button
    </span>
  </button>
</DocumentFragment>
`;
